# cpp_mk_cli_example

./: .gitignore  .gitmodules  LICENSE  readme.md  runme.sh
documentation/: Doxyfile  custom.css  footer.html  header.html
scripts/: colors.sh
sources/: general.dox  main.dox
sources/project_cli_cpp/: CMakeLists.txt  config.h  config.h.in  m_sysinfo.cpp  m_sysinfo.hpp  main.cpp  main.dox  main.hpp
sources/template/: CMakeLists.txt  config.h  config.h.in  main.cpp  main.dox
